--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,6 +30,14 @@
         android:id="@+id/textPhone"
         android:hint="Phone" />
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:id="@+id/lblBirthday"
+        android:onClick="birthday"
+        android:text="Birthday" />
+
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
