--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -59,4 +59,11 @@
         android:text="Find"
         android:id="@+id/btnFind"
         android:onClick="find"/>
+
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/listContact"
+        android:layout_gravity="center_horizontal"
+        android:layout_weight="0.13" />
 </LinearLayout>
